Fixed: Hide sidebar on small screens when button is clicked #10409

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -640,3 +640,9 @@ textarea, input {
 {
     color: #f1f1f1 !important;
 }
+
+@media (max-width: 992px) {
+  .hidden-sidebar {
+    display: none !important;
+}
+}
